{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 145,
  "lineage": "8cbf9116-9bcc-ac4f-8bd5-2b697b7773fc",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "code_deploy_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d913837784f612e",
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:instance/i-0d57bd4ea35961b8f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jdh-ec2_codedeploy_instance_profile",
            "id": "i-0d57bd4ea35961b8f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010dcf4359cfcd9b1",
            "private_dns": "ip-10-0-1-151.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-54-180-243-238.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.243.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094b01eddc50b0d56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ccd5daebcc64c611",
            "tags": {
              "Env": "Production",
              "Name": "CodeDeployInstance"
            },
            "tags_all": {
              "Env": "Production",
              "Name": "CodeDeployInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0133f510a8961ce9c"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux_2",
            "module.iam.aws_iam_instance_profile.ec2_codedeploy_instance_profile",
            "module.iam.aws_iam_role.ec2_codedeploy_role",
            "module.security.aws_security_group.jdh_ec2_codedeploy_sg",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "pp-aws-WEB-ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707099377:loadbalancer/app/pp-aws-WEB-ALB/aff6bd19b1200ca4",
            "arn_suffix": "app/pp-aws-WEB-ALB/aff6bd19b1200ca4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "pp-aws-WEB-ALB-1660406243.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:277707099377:loadbalancer/app/pp-aws-WEB-ALB/aff6bd19b1200ca4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pp-aws-WEB-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0aff898c84565a9cc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b7cce20410db924"
              },
              {
                "subnet_id": "subnet-0ccd5daebcc64c611"
              }
            ],
            "subnets": [
              "subnet-01b7cce20410db924",
              "subnet-0ccd5daebcc64c611"
            ],
            "tags": {
              "Name": "pp-aws-web-ALB"
            },
            "tags_all": {
              "Name": "pp-aws-web-ALB"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.security.aws_security_group.ojy_WEB_ALB_sg",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_subnet.publicsubnet-c",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pp-aws-WEB-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707099377:targetgroup/pp-aws-WEB-TG/611633c27cbedea3",
            "arn_suffix": "targetgroup/pp-aws-WEB-TG/611633c27cbedea3",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:277707099377:targetgroup/pp-aws-WEB-TG/611633c27cbedea3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pp-aws-WEB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jdh_ec2_codedeploy_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:security-group/sg-0133f510a8961ce9c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0133f510a8961ce9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241112003309066700000003",
            "name_prefix": "terraform-",
            "owner_id": "277707099377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pp-aws-codedeploy-sg"
            },
            "tags_all": {
              "Name": "pp-aws-codedeploy-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ojy_WAS_ALB_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:security-group/sg-02e5d164322342591",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e5d164322342591",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fbc862346910ad87"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pp-aws-WAS-ALB-sg",
            "name_prefix": "",
            "owner_id": "277707099377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pp-aws-WAS-ALB-sg"
            },
            "tags_all": {
              "Name": "pp-aws-WAS-ALB-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.ojy_WEB_ALB_sg",
            "module.security.aws_security_group.ojy_WEB_sg",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ojy_WAS_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:security-group/sg-0f2bd9dae788517e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2bd9dae788517e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e5d164322342591"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pp-aws-WAS-sg",
            "name_prefix": "",
            "owner_id": "277707099377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pp-aws-WAS-sg"
            },
            "tags_all": {
              "Name": "pp-aws-WAS-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.ojy_WAS_ALB_sg",
            "module.security.aws_security_group.ojy_WEB_ALB_sg",
            "module.security.aws_security_group.ojy_WEB_sg",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ojy_WEB_ALB_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:security-group/sg-0aff898c84565a9cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aff898c84565a9cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pp-aws-WEB-ALB-sg",
            "name_prefix": "",
            "owner_id": "277707099377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pp-aws-WEB-ALB-sg"
            },
            "tags_all": {
              "Name": "pp-aws-WEB-ALB-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ojy_WEB_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:security-group/sg-0fbc862346910ad87",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbc862346910ad87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aff898c84565a9cc"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pp-aws-WEB-sg",
            "name_prefix": "",
            "owner_id": "277707099377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pp-aws-WEB-sg"
            },
            "tags_all": {
              "Name": "pp-aws-WEB-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.ojy_WEB_ALB_sg",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ojy_bastoin_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:security-group/sg-0fefd2710956a8928",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fefd2710956a8928",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pp-aws-bastion-sg",
            "name_prefix": "",
            "owner_id": "277707099377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pp-aws-bastion-sg"
            },
            "tags_all": {
              "Name": "pp-aws-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0291c82d9d730f0d6",
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:elastic-ip/eipalloc-0291c82d9d730f0d6",
            "association_id": "eipassoc-073254092e4840db8",
            "domain": "vpc",
            "id": "eipalloc-0291c82d9d730f0d6",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-039b8d3e9210fbb7f",
            "private_dns": "ip-10-0-1-78.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.78",
            "public_dns": "ec2-43-200-166-241.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.166.241",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pp-aws-a-pub-Bastion-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013c2446bef83f52c",
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:instance/i-07e1d25e437dec52c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e1d25e437dec52c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0afcd6b5188c440b0",
            "private_dns": "ip-10-0-1-180.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-3-35-156-49.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.156.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e10aef6ba165ded1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0fefd2710956a8928"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ccd5daebcc64c611",
            "tags": {
              "Name": "pp-aws-a-pub-Bastion-ec2"
            },
            "tags_all": {
              "Name": "pp-aws-a-pub-Bastion-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fefd2710956a8928"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.ojy_bastoin_sg",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jdh_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:internet-gateway/igw-034e4e457bf97b680",
            "id": "igw-034e4e457bf97b680",
            "owner_id": "277707099377",
            "tags": {
              "Name": "pp-IGW"
            },
            "tags_all": {
              "Name": "pp-IGW"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "pp-aws-nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0291c82d9d730f0d6",
            "association_id": "eipassoc-073254092e4840db8",
            "connectivity_type": "public",
            "id": "nat-01f737caa374ebe69",
            "network_interface_id": "eni-039b8d3e9210fbb7f",
            "private_ip": "10.0.1.78",
            "public_ip": "43.200.166.241",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ccd5daebcc64c611",
            "tags": {
              "Name": "pp-aws-nat-a"
            },
            "tags_all": {
              "Name": "pp-aws-nat-a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pp-aws-privateRT-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:route-table/rtb-0f7013ad3ec1afa7c",
            "id": "rtb-0f7013ad3ec1afa7c",
            "owner_id": "277707099377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f737caa374ebe69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pp-aws-privateRT-a"
            },
            "tags_all": {
              "Name": "pp-aws-privateRT-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_nat_gateway.pp-aws-nat-a",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pp-aws-privateRT-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:route-table/rtb-007ab4e8b5db1cd19",
            "id": "rtb-007ab4e8b5db1cd19",
            "owner_id": "277707099377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f737caa374ebe69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pp-aws-privateRT-c"
            },
            "tags_all": {
              "Name": "pp-aws-privateRT-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_nat_gateway.pp-aws-nat-a",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pp-aws-publicRT-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:route-table/rtb-0a1cf68945ca54adc",
            "id": "rtb-0a1cf68945ca54adc",
            "owner_id": "277707099377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034e4e457bf97b680",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pp-aws-publicRT-a"
            },
            "tags_all": {
              "Name": "pp-aws-publicRT-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pp-aws-publicRT-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:route-table/rtb-0aead8801c9714785",
            "id": "rtb-0aead8801c9714785",
            "owner_id": "277707099377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034e4e457bf97b680",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pp-aws-publicRT-c"
            },
            "tags_all": {
              "Name": "pp-aws-publicRT-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_a_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7b5c3cea555b030",
            "route_table_id": "rtb-0f7013ad3ec1afa7c",
            "subnet_id": "subnet-0db6994a54aa2b9b0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_nat_gateway.pp-aws-nat-a",
            "module.vpc.aws_route_table.pp-aws-privateRT-a",
            "module.vpc.aws_subnet.privatesubnet-a",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0200cee5fc2d05d4e",
            "route_table_id": "rtb-0f7013ad3ec1afa7c",
            "subnet_id": "subnet-030d6a27792e02b4d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_nat_gateway.pp-aws-nat-a",
            "module.vpc.aws_route_table.pp-aws-privateRT-a",
            "module.vpc.aws_subnet.privatesubnet-a",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bc76b377326895a",
            "route_table_id": "rtb-0f7013ad3ec1afa7c",
            "subnet_id": "subnet-0fe2489dd90424c7d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_nat_gateway.pp-aws-nat-a",
            "module.vpc.aws_route_table.pp-aws-privateRT-a",
            "module.vpc.aws_subnet.privatesubnet-a",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_c_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a92344fb08a5747e",
            "route_table_id": "rtb-007ab4e8b5db1cd19",
            "subnet_id": "subnet-0630fe36d0206dd57"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_nat_gateway.pp-aws-nat-a",
            "module.vpc.aws_route_table.pp-aws-privateRT-c",
            "module.vpc.aws_subnet.privatesubnet-c",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e24be3fcc1b42100",
            "route_table_id": "rtb-007ab4e8b5db1cd19",
            "subnet_id": "subnet-0620bc133212f6f42"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_nat_gateway.pp-aws-nat-a",
            "module.vpc.aws_route_table.pp-aws-privateRT-c",
            "module.vpc.aws_subnet.privatesubnet-c",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098efa98e4016d5d2",
            "route_table_id": "rtb-007ab4e8b5db1cd19",
            "subnet_id": "subnet-044f3022c13588922"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_nat_gateway.pp-aws-nat-a",
            "module.vpc.aws_route_table.pp-aws-privateRT-c",
            "module.vpc.aws_subnet.privatesubnet-c",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_a_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9316a26b86fde1e",
            "route_table_id": "rtb-0a1cf68945ca54adc",
            "subnet_id": "subnet-0ccd5daebcc64c611"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_route_table.pp-aws-publicRT-a",
            "module.vpc.aws_subnet.publicsubnet-a",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_c_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087fbd907df2b88c3",
            "route_table_id": "rtb-0aead8801c9714785",
            "subnet_id": "subnet-01b7cce20410db924"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.jdh_igw",
            "module.vpc.aws_route_table.pp-aws-publicRT-c",
            "module.vpc.aws_subnet.publicsubnet-c",
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:subnet/subnet-0db6994a54aa2b9b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db6994a54aa2b9b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707099377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pp-aws-a-WEB-subnet"
            },
            "tags_all": {
              "Name": "pp-aws-a-WEB-subnet"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:subnet/subnet-030d6a27792e02b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030d6a27792e02b4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707099377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pp-aws-a-WAS-subnet"
            },
            "tags_all": {
              "Name": "pp-aws-a-WAS-subnet"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:subnet/subnet-0fe2489dd90424c7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe2489dd90424c7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707099377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pp-aws-a-DB-subnet"
            },
            "tags_all": {
              "Name": "pp-aws-a-DB-subnet"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:subnet/subnet-0630fe36d0206dd57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0630fe36d0206dd57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707099377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pp-aws-c-WEB-subnet"
            },
            "tags_all": {
              "Name": "pp-aws-c-WEB-subnet"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:subnet/subnet-0620bc133212f6f42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0620bc133212f6f42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707099377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pp-aws-c-WAS-subnet"
            },
            "tags_all": {
              "Name": "pp-aws-c-WAS-subnet"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:subnet/subnet-044f3022c13588922",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044f3022c13588922",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707099377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pp-aws-c-DB-subnet"
            },
            "tags_all": {
              "Name": "pp-aws-c-DB-subnet"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:subnet/subnet-0ccd5daebcc64c611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccd5daebcc64c611",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707099377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pp-aws-a-pub-subnet"
            },
            "tags_all": {
              "Name": "pp-aws-a-pub-subnet"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:subnet/subnet-01b7cce20410db924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b7cce20410db924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707099377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pp-aws-c-pub-subnet"
            },
            "tags_all": {
              "Name": "pp-aws-c-pub-subnet"
            },
            "vpc_id": "vpc-07a4b7ec70ba5106d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jdh_aws_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jdh_aws_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707099377:vpc/vpc-07a4b7ec70ba5106d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0a04f111dda7f96",
            "default_route_table_id": "rtb-0fb00ca07265493b6",
            "default_security_group_id": "sg-09c0e414d57472209",
            "dhcp_options_id": "dopt-0c40619776ba98e9d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a4b7ec70ba5106d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb00ca07265493b6",
            "owner_id": "277707099377",
            "tags": {
              "Name": "pp-aws-VPC"
            },
            "tags_all": {
              "Name": "pp-aws-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}